--- a/Spring_boot_mybatis/src/main/resources/application.properties
+++ b/Spring_boot_mybatis/src/main/resources/application.properties
@@ -12,3 +12,6 @@ datasource.mybatis.min-idle=5
 datasource.mybatis.max-wait=2000
 datasource.mybatis.config-location=classpath:mybatis-config.xml
 datasource.mybatis.mapper-location=classpath:META-INF/mybatis/mapper/*.xml
+
+
+logging.config=classpath:logback-spring.xml
