--- a/Spring_boot_mybatis/src/main/resources/application.properties
+++ b/Spring_boot_mybatis/src/main/resources/application.properties
@@ -14,4 +14,20 @@ datasource.mybatis.config-location=classpath:mybatis-config.xml
 datasource.mybatis.mapper-location=classpath:META-INF/mybatis/mapper/*.xml
 
 
+
+#2nd databaseConfiguration
+secondDB.mybatis.url=jdbc:mariadb://localhost:3306/example
+secondDB.mybatis.userName=root
+secondDB.mybatis.password=latis0701
+secondDB.mybatis.driver-class-name=org.mariadb.jdbc.Driver
+secondDB.mybatis.continueOnError=true
+secondDB.mybatis.initialize=false
+secondDB.mybatis.initial-size=2
+secondDB.mybatis.max-active=5
+secondDB.mybatis.max-idle=5
+secondDB.mybatis.min-idle=5
+secondDB.mybatis.max-wait=2000
+secondDB.mybatis.config-location=classpath:mybatis-config.xml
+secondDB.mybatis.mapper-location=classpath:META-INF/mybatis/mapper/*.xml
+
 logging.config=classpath:logback-spring.xml
