--- a/Spring_boot_mybatis/pom.xml
+++ b/Spring_boot_mybatis/pom.xml
@@ -63,7 +63,21 @@
 			<artifactId>derbyclient</artifactId>
 			<version>10.12.1.1</version>
 		</dependency>
+		
+		
 
+		<!-- MariaDB -->
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<!-- DBcp -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
